--- a/src/gui/MainFrame.form
+++ b/src/gui/MainFrame.form
@@ -78,9 +78,9 @@
                       <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <Group type="103" groupAlignment="3" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="salir1" alignment="0" min="-2" pref="39" max="-2" attributes="0"/>
-                  <Component id="salir" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
+                  <Component id="salir" min="-2" pref="39" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="18" max="32767" attributes="0"/>
           </Group>
